--- a/posts/aurora-dsql-with-drizzle.mdx
+++ b/posts/aurora-dsql-with-drizzle.mdx
@@ -2,7 +2,7 @@
 title: 'Aurora DSQL Setup with Drizzle'
 author: 'Dave Dennis'
 date: '2024-12-13'
-coverImage: 'https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/aurora-dsql-with-drizzle/cover-image.jpg'
+coverImage: 'https://raw.githubusercontent.com/DaveVED/my-posts/main/posts/aurora-dsql-with-drizzle/cover-image.png'
 summary: >
   Amazon recently launched Aurora DSQL, a serverless distributed SQL database
   designed for always-available applications. This post explores how to set up
